[package]
name = "cycles_transfer_station"
version = "0.1.0"
authors = ["levi <levifeldman37@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2.14"
ic-cdk = "0.3.2"
ic-cdk-macros = "0.3"
ic-certified-map = { git = "git://github.com/dfinity/cdk-rs", rev = "129d1a8c595525c6f4c54e73bafa779143e568ce" }
ic-types = "0.1.1"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.9.1"
base64 = "0.13.0"
wasabi_leb128 = "0.4.0"

