
[workspace]
resolver = "2"

members = [
    "canisters/cts",
    "canisters/bank",    
    "canisters/market/cm_main",
    "canisters/market/cm_tc",
    "canisters/market/cm_storage_lib",
    "canisters/market/cm_trades_storage",
    "canisters/market/cm_positions_storage",
    "canisters/fueler",
    "cts_lib",
    "pic_tests/canister_caller",
]

exclude = [
    "pic_tests/tests",
    "pic_tests/tools",
]

[profile.release]
lto = true
opt-level = 'z'          
codegen-units = 1 
split-debuginfo= "packed"
strip = "debuginfo"
debug = false

[profile.dev]
lto = true
opt-level = 'z'          
codegen-units = 1 
split-debuginfo= "packed"
strip = "debuginfo"

[workspace.dependencies]
ic-cdk = "0.12.0"
ic-certified-map = { git = "https://github.com/dfinity/cdk-rs.git", rev = "1da310b58c3bcfa8f946da1d14bd49ee7c11a801" } 
ic-ledger-types = "0.9.0"
candid = "0.10.3"
sha2 = "0.9.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.6"
icrc-ledger-types = "0.1.5"
ic-stable-structures = "0.6.2"
futures = "0.3.23"
num-traits = "0.2.15"
canister-tools = "0.2.2"
ic0 = "0.18.11"
ic-cdk-timers = "0.6.0"
rmp-serde =  "=1.1.2"
leb128 = "0.2.5"
hex = "0.4.3"
