
[workspace]
resolver = "2"

members = [
    "cts_lib",
    "canisters/cts",
    "canisters/bank",    
    "canisters/market/cm_main",
    "canisters/market/cm_tc",
    "canisters/market/cm_storage_lib",
    "canisters/market/cm_trades_storage",
    "canisters/market/cm_positions_storage",
    "canisters/fueler",
    "canisters/top_level_upgrader",
    "pic_tests/canister_caller",
    "outsiders",
]

exclude = [
    "pic_tests/tests",
    "pic_tests/tools",
]

[profile.release]
lto = true
opt-level = 'z'          
codegen-units = 1 
split-debuginfo= "packed"
strip = "debuginfo"
debug = false

[profile.dev]
lto = true
opt-level = 'z'          
codegen-units = 1 
split-debuginfo= "packed"
strip = "debuginfo"

[workspace.dependencies]
ic-cdk = "0.15.1"
ic-certified-map = { git = "https://github.com/dfinity/cdk-rs.git", rev = "1da310b58c3bcfa8f946da1d14bd49ee7c11a801" } 
ic-ledger-types = "0.9.0"
candid = "0.10.10"
sha2 = "0.10.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.15"
serde_cbor = "0.11.2" # change for the ciborium
ic-stable-structures = "0.6.5"
futures = "0.3.23"
num-traits = "0.2.15"
canister-tools = "0.2.2"
ic0 = "0.18.11"
ic-cdk-timers = "0.9.0"
rmp-serde =  "=1.1.2"
leb128 = "0.2.5"
hex = "0.4.3"
thiserror = "1.0.63"
wasabi_leb128 = "0.4.0" # for writing u128
postcard = { version = "1.0.10", features = ["use-std"] }
