[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocket-ic = "2.0.1"
candid = "*"
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic", rev = "1131bd8d04cc57447e4ef1fd143ddaad4e06a811" }
cts_lib = { path = "../rust/cts_lib" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "1131bd8d04cc57447e4ef1fd143ddaad4e06a811" }
