[package]
name = "cts_lib"
version = "0.1.0"
edition = "2021"



[dependencies]
ic-cdk = { workspace = true }
ic-certified-map = { workspace = true }
ic-ledger-types = { workspace = true }
candid = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
canister_authorizations = { path = "./canister_authorizations" }
futures = { workspace = true }
ic_principal = { workspace = true }
rmp-serde = { workspace = true }

