[package]
name = "cts_lib"
version = "0.1.0"
edition = "2021"



[dependencies]
ic-cdk = { workspace = true }
ic-certified-map = { workspace = true }
ic-ledger-types = { workspace = true }
candid = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
futures = { workspace = true }
rmp-serde = { workspace = true }
outsiders = { path = "../outsiders" }
leb128 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
wasabi_leb128 = { workspace = true }
