[workspace]
resolver = "2"

members = [
    "tests",
    "tools",
]

exclude = [
    "canister_caller",
]

[workspace.dependencies]
icrc-ledger-types = "0.1.5"
pocket-ic = "2.2.0"
more-asserts = "0.3.1"
candid = "0.10.3"
cts_lib = { path = "../cts_lib" }
serde = { version = "1.0.193", features = ["derive"] }
ic-ledger-types = "0.9.0"
