[workspace]
resolver = "2"

members = [
    "tests",
    "tools",
]

exclude = [
    "canister_caller",
]

[workspace.dependencies]
icrc-ledger-types = "0.1.5"
pocket-ic = "4.0.0"
more-asserts = "0.3.1"
candid = "0.10.10"
cts_lib = { path = "../cts_lib" }
outsiders = { path = "../outsiders" }
serde = { version = "1.0.193", features = ["derive"] }
ic-ledger-types = "0.9.0"
icrc1-test-suite = "0.1.2"
icrc1-test-env = "0.1.11"
futures = "0.3.30"
anyhow = "1.0.86"
serde_bytes = "0.11.15"
