[package]
name = "bank"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../cts_lib" }
serde = { workspace = true }
candid = { workspace = true }
canister-tools = { workspace = true }
ic_principal = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }

[dev-dependencies]
pocket-ic = "2.0.1"
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" }
cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" } 
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" } 
bincode = "1.3.3"
more-asserts = "0.3.1"

