[package]
name = "bank"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../cts_lib" }
serde = { workspace = true }
candid = { workspace = true }
canister-tools = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
rmp-serde = { workspace = true }
hex = { workspace = true }
ic-certified-map = { workspace = true }
leb128 = { workspace = true }
serde_cbor = { workspace = true }
ic-cdk-timers = { workspace = true }
futures.workspace = true
base64.workspace = true