[package]
name = "cbs_map"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../cts_lib" }
serde = { workspace = true }
candid = { workspace = true }
futures = { workspace = true }
serde_bytes = { workspace = true }
canister-tools = { workspace = true }
