[package]
name = "cts"
version = "0.1.0"
authors = ["levi <levifeldman37@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
cts_lib = { path = "../../cts_lib" }
candid = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_cbor = "0.11.2" # change for the ciborium = "0.2.0"
serde_bytes = { workspace = true }
base64 = "0.13.0"
sha2 = { workspace = true }
num-traits = { workspace = true }
canister-tools = { workspace = true }

[dev-dependencies]
pocket-ic = "2.0.1"
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" }
cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" } 
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "d1315a1b9b002f177526faa5ee6d7e1e1aa3a22a" } 
bincode = "1.3.3"

[features]
test = ["cts_lib/test"]
