[package]
name = "cycles_bank"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../cts_lib" }
serde = { workspace = true }
candid = { workspace = true }
futures = { workspace = true }
canister-tools = { workspace = true }


[features]
test = ["cts_lib/test"]
