[package]
name = "fueler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../cts_lib" }
serde = { workspace = true }
candid = { workspace = true }
canister-tools = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
ic-cdk-timers = { workspace = true }
outsiders = { path = "../../outsiders" }

