[package]
name = "canister_caller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../cts_lib" }
candid = { workspace = true }
ic-cdk = { workspace = true }
