[package]
name = "pic_tests"
version = "0.1.0"
edition = "2021"
publish = false


[[test]]
name = "test_bank"
path = "test_bank.rs"

[[test]]
name = "test_cm_tc"
path = "test_cm_tc.rs"

[[test]]
name = "test_cm_tc_100"
path = "test_cm_tc_100.rs"

[[test]]
name = "test_fueler"
path = "test_fueler.rs"

[[test]]
name = "make_live"
path = "make_live.rs"

[[test]]
name = "test_bank_icrc3"
path = "test_bank_icrc3.rs"

[[test]]
name = "test_upgrade"
path = "test_upgrade.rs"


[dev-dependencies]
pic_tools = { path = "../tools" }
cts_lib = { workspace = true }
pocket-ic = { workspace = true }
icrc-ledger-types = { workspace = true }
more-asserts = { workspace = true }
candid = { workspace = true }
icrc1-test-suite = { workspace = true }
icrc1-test-env = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
outsiders = { workspace = true }
ic-agent = { workspace = true }
tokio = { workspace = true }