[package]
name = "pic_tools"
version = "0.1.0"
edition = "2021"


[dependencies]
candid = { workspace = true }
pocket-ic = { workspace = true }
cts_lib = { workspace = true }
serde = { workspace = true }
icrc-ledger-types = { workspace = true }
more-asserts = { workspace = true }
ic-ledger-types = { workspace = true }