[package]
name = "cm_icrc1token_trade_log_storage"
version = "0.1.0"
edition = "2021"




[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../../cts_lib" }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
