[package]
name = "cm_storage_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cts_lib = { path = "../../../cts_lib" }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
canister-tools = { workspace = true }