[package]
name = "cm_tc"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../../cts_lib" }
cm_storage_lib = { path = "../cm_storage_lib" }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
futures = { workspace = true }
ic-stable-structures = { workspace = true }
ic-cdk-timers = "0.1.2"
ic-crypto-iccsa = { git = "https://github.com/dfinity/ic.git", rev = "c74ce7317761e540d722d01fa6c26a046707f372" }
ic-types = { git = "https://github.com/dfinity/ic.git", rev = "c74ce7317761e540d722d01fa6c26a046707f372" }

