[package]
name = "cm_main"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../../cts_lib" }
candid = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
serde_bytes = { workspace = true }
ic-stable-structures = { workspace = true }
canister-tools = { workspace = true }
