[package]
name = "cm_tc"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
cts_lib = { path = "../../../cts_lib" }
cm_storage_lib = { path = "../cm_storage_lib" }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
futures = { workspace = true }
ic-stable-structures = { workspace = true }
ic-cdk-timers = { workspace = true }
canister-tools = { workspace = true }
leb128 = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }

